<resources>
    <string name="app_name">android_whatsapp</string>
    <string name="login_etUsername">Username</string>
    <string name="login_etPassword">Password</string>
    <string name="login_btnLogin">Login</string>
    <string name="login_title">Login Whatsapp</string>
    <string name="login_registerLink">not registered? click here to register</string>
    <string name="register_title">Register Whatsapp</string>
    <string name="register_etUsername">Username</string>
    <string name="register_etPassword">Password</string>
    <string name="login_etSecondPassword">Confirm Password</string>
    <string name="register_etSecondPassword">Confirm Password</string>
    <string name="register_etDisplayName">Display Name</string>
    <string name="register_loginLink">Allready registered? click here to login</string>
    <string name="register_btnRegister">Register</string>
    <string name="server">10.0.2.2:5116</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your Server</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_title">Settings</string>

</resources>