<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="409dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints"
        android:layout_gravity="center"
        android:background="@drawable/background"
        android:layout_height="700dp">>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="50dp"
                android:text="@string/login_title"
                android:textColor="@color/dark_blue"
                android:textSize="34sp"
                />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="98dp"
                app:srcCompat="@drawable/phone_logo" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="360dp"
                android:layout_height="91dp"
                android:textColor="@color/dark_green"
                android:ems="10"
                android:hint="@string/login_etUsername"
                android:inputType="textPersonName"
                android:padding="20dp"/>

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="360dp"
                android:layout_height="91dp"
                android:textColor="@color/black"
                android:ems="10"
                android:hint="@string/login_etPassword"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                android:padding="20dp"
                />


            <TextView
                android:id="@+id/login_registerLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/login_registerLink" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button"
                android:text="@string/login_btnLogin"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="1dp"

                />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>